# WIDS_AI_MEDIA_AUTOMATION_LAB

./: README.md
wids_submission/wids_submission/submission_agent1/: README.md  pyproject.toml  report.md
wids_submission/wids_submission/submission_agent1/src/wids1/: crew.py  main.py
wids_submission/wids_submission/submission_agent2/src/wids1/: crew.py
