[project]
name = "wids1"
version = "0.1.0"
description = "wids1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
]

[project.scripts]
wids1 = "wids1.main:run"
run_crew = "wids1.main:run"
train = "wids1.main:train"
replay = "wids1.main:replay"
test = "wids1.main:test"
run_with_trigger = "wids1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
